2003-09-17  Tom Tromey  <tromey@redhat.com>

	* testsuite.at (MONOTONE_SETUP): Use "monotone initdb".
	* monotone.1: Document "initdb".
	* monotone.texi (Commands): Document initdb.
	(Creating a Database): New node.
	(Getting Started): Refer to it.
	* commands.cc (initdb): New command.
	* database.cc (database::sql): New argument `init'.
	(database::initialize): New method.
	* database.hh (database::initalize): Declare.
	(database::sql): New argument `init'.

2003-09-17  Tom Tromey  <tromey@redhat.com>

	* tests/t_persist_phrase.at: Use "ls certs".
	* tests/t_nntp.at: Use "ls certs".
	* tests/t_genkey.at: Use "ls keys" and "ls certs".

2003-09-16  Tom Tromey  <tromey@redhat.com>

	* monotone.1: Document "list branches".
	* commands.cc (ls_certs): New function, from `lscerts' command.
	(ls_keys): New function, from `lskeys' command.
	(ls_branches): New function.
	(list): New command.
	(ls): New alias.
	(explain_usage): Split parameter info at \n.
	* monotone.texi (Adding Files): Use "list certs".
	(Committing Changes): Likewise.
	(Forking and Merging): Likewise.
	(Commands): Likewise.
	(Generating Keys): Use "list keys".
	(Commands): Likewise.
	(Commands): Mention "list branches".
	(Branches): Likewise.

2003-09-15  graydon hoare  <graydon@redhat.com>

	* http_tasks.cc: Fix networking to handle long input.

	* ui.cc, ui.hh: Only pad with blanks enough to cover old output
	when ticking.

	* update.cc, cert.cc, commands.cc: Fix cert fetching functions to
	remove bogus certs.

2003-09-15  Tom Tromey  <tromey@redhat.com>

	* monotone.1: Don't mention MT_KEY or MT_BRANCH.

	* monotone.texi (Getting Started): Don't mention MT_DB or
	MT_BRANCH.
	(Adding Files): Explicitly use --db and --branch.
	* app_state.hh (app_state): New fields options, options_changed.
	Declare new methods.  Include work.hh.
	* work.cc (work_file_name): New constant.
	(add_to_options_map): New structure.
	(get_options_path): New function.
	(read_options_map, write_options_map): Likewise.